Appoitment api done

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -7,13 +7,28 @@
 </ion-header>
 
 <ion-content>
-  <ion-item>
-    <ion-label floating class="">Appointment for</ion-label>
-    <ion-input  type="text">Mrs.Shusma Kataria</ion-input>
-</ion-item>
+  <div >
 
+ 
+  <form name="appoitmentForm" [formGroup]="appoitmentForm" (ngSubmit)="submitValue()">
+    <ion-item>
+        <ion-label floating class="">Firstname</ion-label>
+        <ion-input  type="text" formControlName="firstname"></ion-input>
+    </ion-item>
+    <ion-item>
+        <ion-label floating class="">Lastname</ion-label>
+        <ion-input  type="text" formControlName="lastname"></ion-input>
+    </ion-item>
+<ion-item>
+  <ion-label floating class="">Mobile Number</ion-label>
+  <ion-input  type="number" formControlName="contact"></ion-input>
+</ion-item>
+<ion-item>
+  <ion-label floating class="">Email</ion-label>
+  <ion-input  type="email" formControlName="email"></ion-input>
+</ion-item>
 <ion-list>
-    <ion-radio-group>
+    <ion-radio-group radio-group  formControlName="doc_name"> 
       <ion-list-header>
         <ion-label>Select Doctor</ion-label>
       </ion-list-header>
@@ -21,35 +36,35 @@
           <ion-img  class="person-img" src="../assets/images/person1.png"></ion-img>
           <h2>Dr.Dharmesh bhadja</h2>
           <h3>BHMS MD</h3>
-          <ion-radio slot="start" value="dharmesh" checked></ion-radio>
+          <ion-radio slot="start"  value="Dr Dharmesh Bhadja" checked></ion-radio>
         </ion-item>
         <ion-item>
           <ion-img  class="person-img" src="../assets/images/person1.png"></ion-img>
           <h2>Dr.Reshma bhadja</h2>
           <h3>BHMS MD Paediatric</h3>
-          <ion-radio slot="start" value="reshma"></ion-radio>
+          <ion-radio slot="start" value="Dr Reshma Bhadja"></ion-radio>
         </ion-item>
     </ion-radio-group>
   </ion-list>
 
 <ion-item>
   <ion-label>Date</ion-label>
-  <ion-datetime display-format="YYYY-MM-DD"></ion-datetime>
+  <ion-datetime display-format="DD-MM-YYYY" formControlName="date"></ion-datetime>
 </ion-item>
 <ion-item>
   <ion-label>Time</ion-label>
-  <ion-select>
-      <ion-select-option value="morning">Morning (10:30 to 1:30)</ion-select-option>
-    <ion-select-option value="evening">Evening (5:00 to 7:00)</ion-select-option>
+  <ion-select formControlName="time">
+      <ion-select-option value="M">Morning (10:30 to 1:30)</ion-select-option>
+    <ion-select-option value="E">Evening (5:00 to 7:00)</ion-select-option>
   </ion-select>
 </ion-item>
 <ion-item>
   <ion-label floating >Select Reason</ion-label>
-  <ion-select>
-      <ion-select-option value="followup">Follow up</ion-select-option>
-      <ion-select-option value="firstvisit">First Visit/New Case</ion-select-option>
-      <ion-select-option value="labreport">Lab Report</ion-select-option>
-      <ion-select-option value="other">Other</ion-select-option>
+  <ion-select formControlName="reason">
+      <ion-select-option value="Follow Up">Follow up</ion-select-option>
+      <ion-select-option value="First Visit/New Case">First Visit/New Case</ion-select-option>
+      <ion-select-option value="Lab Report">Lab Report</ion-select-option>
+      <ion-select-option value="Other">Other</ion-select-option>
     </ion-select>
 <ion-input type='textarea'></ion-input>
 </ion-item>
@@ -58,4 +73,9 @@
   <ion-button>-></ion-button>
   <ion-input type="text" placeholder="Enter generated code"></ion-input>
 </ion-item>
+<ion-item>
+  <button type="submit">Submit</button>
+</ion-item>
+</form>
+</div>
 </ion-content>
