Write Review and detail page added

--- a/src/app/contactus/contactus.page.html
+++ b/src/app/contactus/contactus.page.html
@@ -4,8 +4,8 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <ion-item>
+<ion-content [innerHtml]="contacts">
+  <!-- <ion-item>
       <ion-img class="person-img" src="../assets/images/person1.png"></ion-img>
       <ion-label>
           Dr.Dharmesh Bhadja
@@ -28,6 +28,6 @@
         Dr Bhadja's Homeopathic Clinic
     </ion-label>
     <p>Address : Bhaktidham Complex, Golden Park main road, B/h Raiya Telephone Exchange, 150 Feet Ring Road, Rajkot - 360 005</p>
-    <!-- <map></map> -->
-  </ion-item>
+ 
+  </ion-item> -->
 </ion-content>
