--- a/src/app/detail-page/detail-page.page.html
+++ b/src/app/detail-page/detail-page.page.html
@@ -1,12 +1,12 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title class="title">Hypothyroidism</ion-title>
+    <ion-title class="title"></ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-<img src="assets/images/hypothyroidism.png">
-<div>
+<ion-content [innerHtml]="details">
+<!-- <img src="assets/images/hypothyroidism.png"> -->
+<!-- <div>
   <h2>
     What is Hypothyroidism?
   </h2>
@@ -36,5 +36,5 @@
     Scrambled it to make a type specimen book.
     It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
   </p>
-</div>
+</div> -->
 </ion-content>
