--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -53,6 +53,21 @@
             </div>
           </ion-card>
         </ion-slide>
+        <ion-slide>
+          <ion-card class="common-card" (click)="clinicDetail()">
+            <ion-grid no-padding class="header-block">
+              <ion-row class="ion-align-items-center">
+                <ion-col no-padding size="500px">
+                  <ion-img  class="logo-img" src="../../assets/images/logo.png"></ion-img>
+                </ion-col>
+                <ion-col no-padding class="logo-lable">
+                  <h3>Dr. Bhadja Homeopathy Clinic</h3>
+                </ion-col>
+              </ion-row>
+            </ion-grid>
+
+          </ion-card>
+        </ion-slide>
       </ion-slides>
     </div>
   </div>
